fix: alert z-index

--- a/src/components/anchor/scss/index.scss
+++ b/src/components/anchor/scss/index.scss
@@ -7,6 +7,8 @@
     transition:
         opacity var(--transition-duration) ease-in-out,
         transform var(--transition-duration) ease-in-out;
+    z-index: 9;
+
 
     @include tokens.state(inactive) {
         opacity: 0;
